refactor: replace Arrays.asList with List.of and simplify switch statements
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>